--- a/Sistema_Padaria/settings.gradle
+++ b/Sistema_Padaria/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.3/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'sistema_padaria'
+rootProject.name = 'Sistema_Padaria'
 include('app')
