--- a/Sistema_Padaria/app/build.gradle
+++ b/Sistema_Padaria/app/build.gradle
@@ -17,24 +17,26 @@ repositories {
 }
 
 dependencies {
+     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+implementation 'org.hibernate:hibernate-core:5.6.8.Final'
+
+// https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
+implementation 'org.hibernate:hibernate-entitymanager:5.6.8.Final'
+
+// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+implementation 'mysql:mysql-connector-java:8.0.29'
+
+
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
-
-// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-      implementation 'mysql:mysql-connector-java:8.0.28'
-
-
-// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-implementation 'mysql:mysql-connector-java:8.0.28'
-
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'sistema_padaria.App'
+    mainClass = 'Sistema_Padaria.App'
 }
 
 tasks.named('test') {
